Improve Naive Bayes translation accuracy

--- a/class/1. Classification/Exercises/05_c_naive_bayes_words.ipynb
+++ b/class/1. Classification/Exercises/05_c_naive_bayes_words.ipynb
@@ -54,17 +54,18 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.naive_bayes import GaussianNB, MultinomialNB"
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
+    "from sklearn.model_selection import GridSearchCV\n"
    ],
    "metadata": {
     "id": "4z7lZ6x5Bb2s",
     "ExecuteTime": {
-     "end_time": "2024-10-21T08:40:27.774980Z",
-     "start_time": "2024-10-21T08:40:26.888286Z"
+     "end_time": "2024-10-22T18:59:02.063676Z",
+     "start_time": "2024-10-22T18:59:02.060415Z"
     }
    },
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 33
   },
   {
    "cell_type": "code",
@@ -75,8 +76,8 @@
     },
     "outputId": "a23017fb-598b-4986-85ce-59c280b24a02",
     "ExecuteTime": {
-     "end_time": "2024-10-21T08:42:19.916966Z",
-     "start_time": "2024-10-21T08:42:19.884755Z"
+     "end_time": "2024-10-22T18:44:23.880211Z",
+     "start_time": "2024-10-22T18:44:23.855280Z"
     }
    },
    "source": [
@@ -108,7 +109,7 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -139,8 +140,8 @@
     "id": "orcMSTyV83u2",
     "outputId": "6a71f387-8150-4280-97d4-441c3f67d79a",
     "ExecuteTime": {
-     "end_time": "2024-10-21T08:43:01.140754Z",
-     "start_time": "2024-10-21T08:43:01.129958Z"
+     "end_time": "2024-10-22T18:44:26.146168Z",
+     "start_time": "2024-10-22T18:44:26.143269Z"
     }
    },
    "outputs": [
@@ -152,7 +153,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -184,12 +185,17 @@
     "  \n",
     "  # iterate over the words\n",
     "  for i, word in enumerate(words):\n",
+    "      # set the last column to the length of the word\n",
+    "      feature_matrix[i][-1] = len(word)\n",
+    "\n",
+    "      \n",
     "      # iterate over the characters in the word\n",
     "      for char in word:\n",
     "          # if the character is in the dictionary, increment the corresponding feature\n",
     "          if char in dictionary:\n",
     "              idx = dictionary.index(char)\n",
     "              feature_matrix[i][idx] += 1\n",
+    "      \n",
     "  return feature_matrix\n",
     "\n",
     "#sanity check\n",
@@ -205,8 +211,8 @@
     "id": "OyvgPKOi_jg7",
     "outputId": "a16a777f-a281-4d3b-d739-4149f7aca25a",
     "ExecuteTime": {
-     "end_time": "2024-10-21T08:51:04.044085Z",
-     "start_time": "2024-10-21T08:51:04.029944Z"
+     "end_time": "2024-10-22T18:49:24.377256Z",
+     "start_time": "2024-10-22T18:49:24.372169Z"
     }
    },
    "outputs": [
@@ -215,9 +221,9 @@
      "output_type": "stream",
      "text": [
       "[[4. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0.]\n",
+      "  0. 0. 0. 0. 0. 4.]\n",
       " [0. 4. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      "  0. 0. 0. 0. 0. 0.]]\n"
+      "  0. 0. 0. 0. 0. 4.]]\n"
      ]
     },
     {
@@ -226,12 +232,76 @@
        "(2, 30)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 8
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-10-22T19:12:12.682311Z",
+     "start_time": "2024-10-22T19:12:12.675074Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#We create a trigram dictionary in order to try to improve the accuracy of our model\n",
+    "trigram_dictionary = [a + b + c for a in dictionary for b in dictionary for c in dictionary]  # Crear trigramas posibles\n",
+    "\n",
+    "\n",
+    "def get_features(words):\n",
+    "    # Get the number of words\n",
+    "    n = len(words)\n",
+    "    # Create a matrix of zeros with the shape of n and the number of characters in the dictionary\n",
+    "    feature_matrix = np.zeros((n, len(dictionary) + len(trigram_dictionary) + 2))  # Add 2 columns for vowels count and word length\n",
+    "    \n",
+    "    # Define the vowels\n",
+    "    vowels = ['a', 'e', 'i', 'o', 'u', 'ä', 'ö', 'ü']\n",
+    "    # Iterate over the words\n",
+    "    for i, word in enumerate(words):\n",
+    "        # Set the last column to the length of the word\n",
+    "        feature_matrix[i][-1] = len(word)\n",
+    "\n",
+    "        # Count the number of vowels\n",
+    "        vowel_count = sum(1 for char in word if char in vowels)\n",
+    "        feature_matrix[i][-2] = vowel_count\n",
+    "    \n",
+    "        # Iterate over the trigrams in the word\n",
+    "        for j in range(len(word) - 2):\n",
+    "            trigram = word[j:j+3]\n",
+    "            if trigram in trigram_dictionary:\n",
+    "                trigram_idx = len(dictionary) + trigram_dictionary.index(trigram)\n",
+    "                feature_matrix[i][trigram_idx] += 1\n",
+    "                \n",
+    "        # Iterate over the characters in the word\n",
+    "        for char in word:\n",
+    "            # If the character is in the dictionary, increment the corresponding feature\n",
+    "            if char in dictionary:\n",
+    "                idx = dictionary.index(char)\n",
+    "                feature_matrix[i][idx] += 1\n",
+    "\n",
+    "    return feature_matrix\n",
+    "\n",
+    "# Sanity check\n",
+    "final_matrix = get_features(['aaaa', 'bbbb'])\n",
+    "print(final_matrix)\n",
+    "print(final_matrix.shape)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4. 0. 0. ... 0. 4. 4.]\n",
+      " [0. 4. 0. ... 0. 0. 4.]]\n",
+      "(2, 27032)\n"
+     ]
+    }
+   ],
+   "execution_count": 47
   },
   {
    "cell_type": "markdown",
@@ -322,8 +392,8 @@
     "id": "nRKavmYCFsKy",
     "outputId": "4ddaf287-b964-4bbf-8969-65747f1c79d0",
     "ExecuteTime": {
-     "end_time": "2024-10-21T09:19:23.345578Z",
-     "start_time": "2024-10-21T09:19:23.196376Z"
+     "end_time": "2024-10-22T19:12:23.577021Z",
+     "start_time": "2024-10-22T19:12:17.541569Z"
     }
    },
    "outputs": [
@@ -335,20 +405,20 @@
       "Spanish total words:  14758\n",
       "Spanish total filtered words:  2370\n",
       "Spanish Data shape: \n",
-      "(2370, 30)\n",
+      "(2370, 27032)\n",
       "Spanish Labels shape: \n",
       "(2370,)\n",
       "***FINNISH***\n",
       "Finnish total words:  8300\n",
       "Finnish total filtered words:  3106\n",
       "Finnish data shape: \n",
-      "(3106, 30)\n",
+      "(3106, 27032)\n",
       "Finnish labels shape: \n",
       "(3106,)\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 48
   },
   {
    "cell_type": "markdown",
@@ -386,8 +456,8 @@
     "id": "OMPnPcNBMPdR",
     "outputId": "636936dd-aedf-4340-b14e-f9f65f27dade",
     "ExecuteTime": {
-     "end_time": "2024-10-21T09:21:01.531467Z",
-     "start_time": "2024-10-21T09:21:01.387808Z"
+     "end_time": "2024-10-22T19:12:32.697359Z",
+     "start_time": "2024-10-22T19:12:25.927604Z"
     }
    },
    "outputs": [
@@ -400,13 +470,13 @@
       "Finnish total words:  8300\n",
       "Finnish total filtered words:  3106\n",
       "Data shape: \n",
-      "(5476, 30)\n",
+      "(5476, 27032)\n",
       "Labels shape: \n",
       "(5476,)\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 49
   },
   {
    "cell_type": "markdown",
@@ -433,14 +503,28 @@
     "X, y = get_features_and_labels()\n",
     "\n",
     "#YOUR CODE GOES HERE\n",
-    "def word_classification(X, y):\n",
-    "    accs = cross_val_score(MultinomialNB(), X, y, cv=5)\n",
-    "    return accs\n",
+    "def word_classification(X, y):  \n",
+    "    model = MultinomialNB()\n",
+    "    param_grid = {\n",
+    "        'alpha': [0.1, 0.5, 1.0, 1.5, 2.0, 5.0],        \n",
+    "        'fit_prior': [True, False],\n",
+    "        'force_alpha': [True, False]\n",
+    "    }\n",
     "\n",
-    "accs = word_classification(X, y)\n",
+    "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5)\n",
+    "    grid_search.fit(X, y)\n",
+    "    best_params = grid_search.best_params_\n",
     "\n",
-    "print (\"Model accuracy per fold:\", accs)\n",
-    "print(\"Average accuracy:\", sum(accs)/len(accs))\n"
+    "    best_model = grid_search.best_estimator_\n",
+    "    accs = cross_val_score(best_model, X, y, cv=5)\n",
+    "\n",
+    "    return accs, best_params\n",
+    "\n",
+    "accs, best_params = word_classification(X, y)\n",
+    "\n",
+    "print(\"Model accuracy per fold:\", accs)\n",
+    "print(\"Average accuracy:\", sum(accs) / len(accs))\n",
+    "print(\"Best parameters:\", best_params)\n"
    ],
    "metadata": {
     "colab": {
@@ -449,8 +533,8 @@
     "id": "IYoKADhuLgzf",
     "outputId": "93e7ada3-477b-4745-e62e-5eb3132c521f",
     "ExecuteTime": {
-     "end_time": "2024-10-21T09:22:03.762931Z",
-     "start_time": "2024-10-21T09:22:03.586713Z"
+     "end_time": "2024-10-22T19:13:43.290519Z",
+     "start_time": "2024-10-22T19:12:36.446812Z"
     }
    },
    "outputs": [
@@ -462,12 +546,13 @@
       "Spanish total filtered words:  2370\n",
       "Finnish total words:  8300\n",
       "Finnish total filtered words:  3106\n",
-      "Model accuracy per fold: [0.85310219 0.89680365 0.88401826 0.87762557 0.87579909]\n",
-      "Average accuracy: 0.8774697530246975\n"
+      "Model accuracy per fold: [0.94251825 0.94885845 0.95251142 0.94063927 0.943379  ]\n",
+      "Average accuracy: 0.9455812752058128\n",
+      "Best parameters: {'alpha': 0.1, 'fit_prior': False, 'force_alpha': True}\n"
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 50
   }
  ]
 }
